--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "leaflet": "^1.9.4",
     "nuxt": "^3.20.2",
     "nuxt-icon": "^1.0.0-beta.7",
+    "nuxt-marquee": "^1.0.4",
     "swiper": "^12.0.3",
     "vue": "^3.5.25",
     "vue-router": "^4.6.4"
